# solanadegen

./: README.md  dataprep.ipynb  dataprep.py  dataprep_rust.ipynb  dataprep_rust.py  initdb.sql  julia.ipynb  pasha.ipynb  pasha_v2.ipynb  pasha_v2_1dsell.ipynb  pasha_v3.ipynb  pasha_v3_dca_buy_10m.ipynb  pasha_v3_dca_buy_now.ipynb  pasha_v3_dca_no_rare_filter.ipynb  pasha_v3_dca_no_rare_filter_x2features.ipynb  pasha_v4_x2features.ipynb  pasha_v5_rust.ipynb  playground_v1.py  pyproject.toml
rust_py_extension/: Cargo.toml
rust_py_extension/src/: lib.rs
sql/: bot.sql  dbstats.sql  derived_hourly_prices.sql  individual_trades.sql  initdb.sql  playground.sql  tokens.sql  tokenstats.sql  trades_dataset.sql  united_trades.sql  volume.sql
