[tool.poetry]
name = "solanadegen"
version = "0.1.0"
description = ""
authors = ["pavel <pshishkin@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
python-dotenv = "^1.0.0"
requests = "^2.31.0"
base58 = "^2.1.1"
psycopg2 = "^2.9.9"
solana = "^0.30.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
