[tool.poetry]
name = "solanadegen"
version = "0.1.0"
description = ""
authors = ["pavel <pshishkin@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
python-dotenv = "^1.0.0"
requests = "^2.31.0"
base58 = "^2.1.1"
psycopg2 = "^2.9.9"
python-telegram-bot = "^20.7"
jupyter = "^1.0.0"
pandas = "^2.1.4"
matplotlib = "^3.8.2"
catboost = "^1.2.2"
scikit-learn = "^1.3.2"
seaborn = "^0.13.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
