[package]
name = "rust_py_extension"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pyo3 = { version = "0.15", features = ["extension-module"] }
numpy = "0.15"
csv = "1.1"
serde = { version = "1.0", features = ["derive"] }
chrono = "*" 
serde_json = "*"
once_cell = "*"

[lib]
crate-type = ["cdylib"]
